# computer-graphics

./: .gitignore  Makefile  README.md  main.cpp
FlappyBird/: FlappyBird.sln  FlappyBird.vs2010.sln
FlappyBird/FlappyBird/: App.cpp  App.h  Bridge.cpp  Bridge.h  CMakeLists.txt  Camera.cpp  Camera.h  Clouds.cpp  Clouds.h  CreditsMenu.cpp  CreditsMenu.h  Cursor.cpp  Cursor.h  EditorMenu.cpp  EditorMenu.h  FadeConstant.cpp  FadeConstant.h  FadeInOut.cpp  FadeInOut.h  Flappy.cpp  Flappy.h  FlappyBird.aps  FlappyBird.cbp  FlappyBird.rc  FlappyBird.vcxproj  FlappyBird.vcxproj.filters  FlappyBird.vs2010.vcxproj  FlappyBird.vs2010.vcxproj.filters  FlappyFeatherParticleSystem.cpp  FlappyFeatherParticleSystem.h  Floor.cpp  Floor.h  GameOverPanel.cpp  GameOverPanel.h  GameScene.cpp  GameScene.h  Hint.cpp  Hint.h  Libraries.targets  Libraries.vs2010.targets  (+53 more)
FlappyBird/FlappyBird/lib/x64/: pugixml.lib
Practico3-igui/: Practico3.sln
Practico3-igui/Practico3/: Ejercicio1.cpp  Ejercicio2.cpp  Ejercicio3.cpp  Practico3.vcxproj  Practico3.vcxproj.filters  Quaternion.h  Scene.cpp  Scene.h  SceneError.h  Sprite.h  Texture.cpp
Raytracer/: Raytracer.sln  Raytracer.vs2010.sln
Raytracer/Raytracer/: AABB.cpp  AABB.h  App.cpp  App.h  BufferContent.cpp  BufferContent.h  CPUInfo.cpp  CPUInfo.h  Camera.cpp  Camera.h  Cyllinder.cpp  Cyllinder.h  ImageBlock.cpp  ImageBlock.h  Intersection.cpp  Intersection.h  Libraries.targets  Libraries.vs2010.targets  Light.cpp  Light.h  Logger.cpp  Logger.h  Material.cpp  Material.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Quad.cpp  Quad.h  Ray.cpp  Ray.h  Raytracer.aps  Raytracer.rc  Raytracer.vcxproj  Raytracer.vcxproj.filters  Raytracer.vs2010.vcxproj  RaytracerRenderer.cpp  RaytracerRenderer.h  RaytracerThread.cpp  (+32 more)
(+1 files in other folders)
